[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "qc_lab"
version = "0.1.0a3"
description = "QC Lab: a python package for quantum-classical modeling."
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [ { name="Tempelaar Team", email="roel.tempelaar@northwestern.edu" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux :: Linux",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "mpi4py",
    ]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-design",
    "sphinx-togglebutton",
    "sphinxcontrib-mermaid",
    "graphviz",
]